--- a/team.html
+++ b/team.html
@@ -538,7 +538,7 @@
                             <img src="images/team/unknown.png" alt="Image" class="img-fluid">
                         </a>
                         <div class="bg-white m-body">
-                            <h5 style="text-align: center;">Ian T.</h5>
+                            <h5 style="text-align: center;">Ian Tsang</h5>
                             <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">Tutor
                             </h6>
                             <p>Ian is currently a freshman studying Mechanical Engineering at Penn State. For nearly a
@@ -574,6 +574,50 @@
                                 Pre-Calc) and science (Integrated/General Science, Biology, Chemistry,) as well as AP
                                 Human Geography and PSAT/SAT/ACT
                                 test prep.</p>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-entry media-size1">
+                        <a href="single.html" style="background: none;" class="text-center">
+                            <img src="images/team/austin.png" alt="Image" class="img-fluid">
+                        </a>
+                        <div class="bg-white m-body">
+                            <h5 style="text-align: center;">Austin Skar</h5>
+                            <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">Tutor
+                            </h6>
+                            <p>Austin Skar is a Junior in highschool. He loves coding, band and chess as well as math and science. He has been a nominated tutor twice and has a qualifying gpa to start college courses. Because of this, he wants to share his success with others and wants to continue being an advocate for better education and devotion to literary prowess. He has been a proud member for some months now, and has never denied a single student no matter how difficult or easy the course material is. He tutors genres of education devoted to STEM fields as well as chess and other strategic games.</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-entry media-size1">
+                        <a href="single.html" style="background: none;" class="text-center">
+                            <img src="images/team/selina.png" alt="Image" class="img-fluid">
+                        </a>
+                        <div class="bg-white m-body">
+                            <h5 style="text-align: center;">Selina Syed</h5>
+                            <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">Tutor
+                            </h6>
+                            <p>Selina Syed is currently a junior studying at Portola High School. She  joined Silverline tutoring because she has a passion for teaching students and she wanted to utilize her prior experience of teaching her sibling at Silverline. A few of her hobbies include playing the guitar, listening to podcasts and music, and reading. A goal of hers is to assist students in achieving their greatest potential and learn how to effectively problem-solve. She tutors tutor all levels of English, basic math and science. </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-entry media-size1">
+                        <a href="single.html" style="background: none;" class="text-center">
+                            <img src="images/team/swathi.png" alt="Image" class="img-fluid">
+                        </a>
+                        <div class="bg-white m-body">
+                            <h5 style="text-align: center;">Swathi Rao</h5>
+                            <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">Tutor
+                            </h6>
+                            <p>Swathi Is a junior at UT Dallas majoring in Neuroscience. When she was younger, she was incredibly ambitious and had aspirations to become a medical professional. She started learning the right way to learn and teach others, which has ultimately led her to become a straight-A student throughout high school and college. She hopes she can help students with whatever subject they need help with as well as teach them study skills and build a relationship with her students in which she can also learn from them. She has been with Silverline tutoring since Summer 2022 and enjoys being a part of the global community that the service offers. At Silverline, she tutors in High School to College Level Science, ACT and SAT as well as History and English.
+                            </p>
 
                         </div>
                     </div>
