--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 		</div>
 	</nav>
-	<div class="hero hero1 overlay" style="background-image: url('images/hero_1.svg');">
+	<div class="hero hero1 overlay" style="background-image: url('images/home/hero_1.svg');">
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-lg-6">
@@ -113,7 +113,7 @@
 				<div class="col-lg-6">
 					<div class="row">
 						<div class="col-12 col-lg-12" data-aos="fade-up" data-aos-delay="400">
-							<img src="images/about_1.png" alt="Image" class="gen-img" style="margin-left: 20px;">
+							<img src="images/home/about_1.png" alt="Image" class="gen-img" style="margin-left: 20px;">
 						</div>
 					</div>
 				</div>
