--- a/team.html
+++ b/team.html
@@ -221,7 +221,7 @@
                 <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
                     <div class="media-entry media-size0">
                         <a href="single.html" style="background: none;" class="text-center">
-                            <img src="images/team/hasan.png" alt="Image" class="img-fluid">
+                            <img src="images/team/hasan.jpeg" alt="Image" class="img-fluid">
                         </a>
                         <div class="bg-white m-body">
                             <h5 style="text-align: center;">Hassan Palanpurwala</h5>
@@ -229,7 +229,7 @@
                                 Innovation Officer</h6>
                             <p>Hassan Palanpurwala is currently a rising senior in South Florida. Hassans urbane
                                 attitude, passion for helping others,
-                                and organization allowed him to fit in as the marketing head at Silverline Tutoring.
+                                and organization allowed him to fit in as the innovation head at Silverline Tutoring.
                                 Hassan’s passion for helping others
                                 came at a young age when he struggled with speaking English at school. Hassans first
                                 language was Gujarati, and when he
@@ -241,14 +241,13 @@
                                 local schools to bring speech and
                                 debate to schools with less resources. These goals and passions led him to Silverline
                                 Tutoring. After applying for a
-                                tutoring position at Silverline, Hassan was given the opportunity to become marketing
+                                tutoring position at Silverline, Hassan was given the opportunity to become innovation
                                 head. His experience in DECA, a
                                 business club at his school, helped him gain this position at Silverline. Aside from
                                 placing first at DECA states and
                                 qualifying for internationals, Hassans passion for debate and public speaking,
                                 qualifying for nationals, and placing at
-                                multiple national tournaments also helped him climb the ranks at Silverline to become
-                                marketing head. Hassans position
+                                multiple national tournaments also helped him climb the ranks at Silverline. Hassans position
                                 at his local mosque where he helps plan and organize events, as well as manage finances,
                                 also helps him perform his job
                                 effectively and efficiently at Silverline.</p>
