--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
 
 
 		<div class="hero hero2 overlay" style="background-image:
-			url('images/whoweare/about1.png');">
+			url('images/about/about1.png');">
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="col-lg-5 mx-auto text-center">
