--- a/team.html
+++ b/team.html
@@ -201,6 +201,27 @@
                 <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
                     <div class="media-entry media-size0">
                         <a href="single.html" style="background: none;" class="text-center">
+                            <img src="images/team/shivam.png" alt="Image" class="img-fluid">
+                        </a>
+                        <div class="bg-white m-body">
+                            <h5 style="text-align: center;">Shivam Shah</h5>
+                            <h6 style="padding: 5px; border-radius: 5px; background: #5271FF; text-align: center;">Chief
+                                Human Resource Officer</h6>
+                            <p>Shivam is currently a rising senior in Northern Illinois. He spends his weekday mornings working with ESY children seeking extra support over summer at a local elementary school and frequently travels during the school year for Track & Field, Soccer, and ModelUN. His active participation and energetic attitude in both his school and neighboring communities has suited him as the Human Resources head for Silverline Tutoring. As a student who’s received tutoring himself, Shivam’s found that tutoring agencies often overprice their services and neglect to offer free resources that educated communities flourish and rely upon for academic success. As the Chief Human Resources Officer, Shivam communicates extensively with students and tutors to allow services to occur instantly, and serves to provide opportunities for students to take advantage of. During the school year, he leads his SkillsUSA club and competes at the world level for VEX Robotics. Through his collaboration with faculty and his team to prepare for competitions, he’s able to instantly connect with individuals across the globe, with everlasting discussions in politics, school, and life in general, always available to provide advice. Going forward, Shivam hopes that Silverline Tutoring’s services will be more accessible for students without the necessary technological means and is excited to see the up and coming developments. </p>
+                            <p>Education: <br><br> <span style="color: #AFA99E;">Waubonsie Valley High School ‘23</span></p>
+                            <p>Hobbies</p>
+                            <ul>
+                                <li>Soccer</li>
+                                <li>Investing</li>
+                                <li>Debate</li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-entry media-size0">
+                        <a href="single.html" style="background: none;" class="text-center">
                             <img src="images/team/hasan.jpeg" alt="Image" class="img-fluid">
                         </a>
                         <div class="bg-white m-body">
@@ -249,27 +270,8 @@
                         </a>
                         <div class="bg-white m-body">
                             <h5 style="text-align: center;">Shivvani Satish</h5>
-                            <h6 style="padding: 5px; border-radius: 5px; background: #5271FF; text-align: center;">Chief
-                                Human Resource Officer</h6>
-                            <p>Shivvani is currently a rising college freshman at the University of Texas at Dallas. Her
-                                interest in tutoring as well
-                                as her interpersonal skills allowed her to become the Human Resources Officer at
-                                Silverline Tutoring Services. Shivvani
-                                also posses a strong work ethic and is dedicated in pursuing her interests. Shivvani’s
-                                passion in tutoring stems from
-                                running math and science tutorial session for special education kids during her time at
-                                highschool. Using the experience
-                                running the tutorial session, she found the motivation to apply for a position at
-                                Silverline Tutoring in May of 2021 and
-                                has only worked her way up ever since. Her passion for supporting special needs students
-                                in math and STEM subjects makes
-                                her thrive in her position. At present, she helps manage partnerships and negotiations
-                                with other organizations,
-                                allowing Silverline to connect with new groups of students and further its impact.
-                                Outside of Silverline, she enjoys
-                                competing in Mu Alpha Theta, HOSA, and Science Olympiad. Additionally, she loves reading
-                                books of all genres, baking,
-                                and taking pride in being a member of her school's philosophy and book club.</p>
+                            <h6 style="padding: 5px; border-radius: 5px; background: #5271FF; text-align: center;">Chief Compliance Officer</h6>
+                            <p>Shivvani is currently a rising college freshman at the University of Texas at Dallas majoring in Neuroscience and minoring in Philosophy. Her interest in tutoring as well as her interpersonal skills allowed her to become the Compliance Officer at Silverline Tutoring. Shivvani also possesses a strong work ethic and is dedicated to pursuing her interests. Shivvani’s passion in tutoring stems from running math and science tutorial sessions for special education kids during her time in high school. Using the experience running the tutorial session, she found the motivation to apply for a position at Silverline Tutoring in May of 2021 and has only worked her way up ever since. Her passion for supporting special needs students in math and STEM subjects makes her thrive in her position.  At present, she helps manage filing for the organization, allowing Silverline to connect with new groups of students and further its impact. Outside of Silverline, she enjoys competing in Mu Alpha Theta and Science Olympiad. Additionally, she loves reading books of all genres, baking, drawing and philosophy.</p>
                             <p>Education: <br><br> <span style="color: #AFA99E;">University of Texas at Dallas
                                     '26</span></p>
                             <p>Hobbies</p>
