--- a/team.html
+++ b/team.html
@@ -371,13 +371,17 @@
                         <div class="bg-white m-body">
                             <h5 style="text-align: center;">Lexi Leid</h5>
                             <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">Marketing Intern</h6>
-                            <p>Lexi Leid is a third-year undergraduate student from Seattle studying event management. Although she is from the west coast, she attends school out east within the Southern Florida region. Lexi decided to join Silverline Tutoring as a marketing intern to share her passion for content creation; meanwhile, she always creates new designs and pays close attention to detail wherever she goes. Lexi joined silverline because it offers free tutoring to any student struggling or looking for the potential to further gain learning skills across various course subjects. Lexi herself has learning disabilities. Therefore, she found it essential to join alongside a community of tutors, students, and faculty/staff who share the same passion for teaching and helping each other regardless of academic difficulties due to learning differences. Throughout her elementary through high school years, the one-on-one tutoring help she received helped her learn and grow tremendously. Lexi realized that “learning disabilities are not life disabilities; just because something is hard does not mean it is impossible.” We all make it to the same place at some point. Today and every day forward, she progresses her way through life and continues to thrive in any environment presented to her.
+                            <p>Lexi Leid is a third-year undergraduate student from Seattle studying event management. Although she is from the west coast, she attends school east within Southern Florida. Lexi decided to join Silverline Tutoring as a marketing intern to share her passion for content creation. The main factor that stood out to her was that Silverline offers free tutoring to any student struggling or looking for the potential to further gain learning skills across various course subjects. Lexi herself has learning disabilities. Therefore, she found it super essential to join alongside a community of tutors and students who share the same passion for teaching and helping each other regardless of academic difficulties due to learning differences. Lexi realized that “learning disabilities are not life disabilities; just because something is hard does not mean it is impossible.” Lexi always tells others how her story resembles a butterfly in that it is very similar. She, too, needed to spread her wings and overcome many barriers to get to where she needed to be.
                             </p>
                             <p>Education: <br><br> <span style="color: #AFA99E;">Lynn University ‘24</span></p>
                             <p>Hobbies</p>
                             <ul>
                                 <li>Fashion</li>
                                 <li>Cosmetics</li>
+                                <li>Traveling</li>
+                                <li>Music</li>
+                                <li>Events</li>
+                                <li>Learning Languages</li>
 
                         </div>
                     </div>
