--- a/team.html
+++ b/team.html
@@ -318,6 +318,49 @@
                 <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
                     <div class="media-entry media-size2">
                         <a href="single.html" style="background: none;" class="text-center">
+                            <img src="images/team/ariana.png" alt="Image" class="img-fluid">
+                        </a>
+                        <div class="bg-white m-body">
+                            <h5 style="text-align: center;">Ariana Malik</h5>
+                            <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">Events Manager</h6>
+                            <p>Ariana Malik is a high school senior at the Gwinnett School of Math,Science, and Technology (GSMST) in Lawrenceville, Georgia. She enjoys learning about new developments in STEM and participating in a variety of school organizations such as National German Honor Society and Service Learning. In her free time she enjoys playing the guitar, listening to music, and volunteering. She has completed several internships including a civic engagement coordinator position with Asian Americans Advancing Justice and an operations intern position with MovementLabs. In her previous positions she has planned educational webinars, generated ideas for future organizational events, and has organized  and managed STEM and mental health summits at her school and local library. These experiences helped her gain knowledge in project management, event planning, and data analytics which are essential elements of successful events. Her values strongly aligned with the mission of Silverline Tutoring as she also believes that learning should be accessible to all students regardless of their circumstances and struggles. Therefore, she aims to use her skills to help the organization spread their message and engage more students. </p>
+                            <p>Education: <br><br> <span style="color: #AFA99E;">GSMST ‘23</span></p>
+
+                            <p>Hobbies</p>
+                            <ul>
+                                <li>Playing the guitar </li>
+                                <li>Writing</li>
+                                <li>Baking</li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-entry media-size2">
+                        <a href="single.html" style="background: none;" class="text-center">
+                            <img src="images/team/sophia.png" alt="Image" class="img-fluid">
+                        </a>
+                        <div class="bg-white m-body">
+                            <h5 style="text-align: center;">Sophia Zheng</h5>
+                            <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">Resource Manager</h6>
+                            <p>Sophia is a high school junior living in Virginia, United States of America. She enjoys photography and traveling to National parks in her free time. Her other hobbies include writing, reading mystery books, and hanging out with her friends. She has attended both public and private schools, which have formed her passion for socioeconomic issues. She wishes to decrease educational inequities in the public school system. She also wants to improve healthcare access in rural and underserved areas. Her future career path will either take her to public health, with a concentration in mental health, or nutritional studies. She has joined as a resource manager to spread the opportunities that she has gained to other students. Silverline Tutoring would allow students her age to pursue their own activities. She aims to give a wide variety of internship and scholarship applications to members of Silverline. These internships will give students the hands-on opportunity for future job success. She will bring prior volunteering experience in tutoring, as a camp counselor, and babysitting to her work in the education field. 
+                            </p>
+                            <p>Education: <br><br> <span style="color: #AFA99E;">Norfolk Academy 23’</span></p>
+
+                            <p>Hobbies</p>
+                            <ul>
+                                <li>Reading </li>
+                                <li>Writing</li>
+                                <li>Music</li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-entry media-size2">
+                        <a href="single.html" style="background: none;" class="text-center">
                             <img src="images/team/madhav.png" alt="Image" class="img-fluid">
                         </a>
                         <div class="bg-white m-body">
@@ -382,6 +425,27 @@
                                 <li>Music</li>
                                 <li>Events</li>
                                 <li>Learning Languages</li>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-entry media-size2">
+                        <a href="single.html" style="background: none;" class="text-center">
+                            <img src="images/team/mihir.png" alt="Image" class="img-fluid">
+                        </a>
+                        <div class="bg-white m-body">
+                            <h5 style="text-align: center;">Mihir Bhanji</h5>
+                            <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">Marketing Intern</h6>
+                            <p>Mihir Bhanji is currently a high school senior at Esperanza High School in Southern California. Mihir joined Silverline Tutoring because of his passion towards tutoring and helping others achieve their goals. What made Silverline appealing to Mihir, was their initiative towards closing the education gap, and providing all students with free tutoring resources. This resonates deeply with him, because he’s seen first hand what happens when students lack adequate resources to learn. He became a marketing intern, because he’s always been curious and interested about marketing, and wants to gain more experience in the world of marketing. In school, he loves being the president of his school’s robotics and rocketry club. His passion for engineering in high school, has led him to plan to major in mechanical engineering in college. He loves being a part of, and being able to make a difference in his community. He pursues these passions by organizing toy drives and school cleanups at his high school. In addition, he also volunteers and organizes events for his local library. He believes his years of tutoring experience, and passion will be able to help countless students.
+                            </p>
+                            <p>Education: <br><br> <span style="color: #AFA99E;">Esperanza Class of 23’</span></p>
+                            <p>Hobbies</p>
+                            <ul>
+                                <li>Wrestling </li>
+                                <li>Reading</li>
+                                <li>Video Games</li>
+                                <li>Cooking</li>
 
                         </div>
                     </div>
