bio updates + bugs

--- a/services.html
+++ b/services.html
@@ -113,7 +113,7 @@
 				<div class="col-lg-6">
 					<div class="row">
 						<div class="col-12 col-lg-12" data-aos="fade-up" data-aos-delay="400">
-							<img src="images/services/tutoring.png" alt="Image" class="gen-img" style="margin-left: 20px;">
+							<img src="images/services/tutoring.png" alt="Image" class="gen-img" style="">
 						</div>
 
 					</div>
@@ -136,7 +136,7 @@
 				<div class="col-lg-6">
 					<div class="row">
 						<div class="col-12 col-lg-12" data-aos="fade-up" data-aos-delay="400">
-							<img src="images/services/resources.jpeg" alt="Image" class="gen-img" style="margin-left: 20px;">
+							<img src="images/services/resources.jpeg" alt="Image" class="gen-img" style="">
 						</div>
 
 					</div>
@@ -152,11 +152,12 @@
 				<div class="col-lg-6">
 					<div class="row">
 						<div class="col-12 col-lg-12" data-aos="fade-up" data-aos-delay="400">
-							<img src="images/services/lectures.png" alt="Image" class="gen-img" style="margin-left: 20px;">
+							<img src="images/services/lectures.png" alt="Image" class="gen-img" style="padding-bottom: 20px;">
 						</div>
 
 					</div>
 				</div>
+			
 				<div class="col-lg-6">
 					<span class="subheading" data-aos="fade-up">Community Events</span>
 					<h2 class="heading mb-3" data-aos="fade-up" data-aos-delay="100">Lectures</h2>
@@ -175,7 +176,7 @@
 				<div class="col-lg-6">
 					<div class="row">
 						<div class="col-12 col-lg-12" data-aos="fade-up" data-aos-delay="400">
-							<img src="images/services/shorts.png" alt="Image" class="gen-img" style="margin-left: 20px;">
+							<img src="images/services/shorts.png" alt="Image" class="gen-img" style="padding-bottom: 20px;">
 						</div>
 
 					</div>
