--- a/team.html
+++ b/team.html
@@ -141,6 +141,26 @@
                 <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
                     <div class="media-entry media-size0">
                         <a href="single.html" style="background: none;" class="text-center">
+                            <img src="images/team/johnd.png" alt="Image" class="img-fluid">
+                        </a>
+                        <div class="bg-white m-body">
+                            <h5 style="text-align: center;">John Derham</h5>
+                            <h6 style="padding: 5px; border-radius: 5px; background: #5271FF; text-align: center;">Chief Operating Officer</h6>
+                            <p>John Derham is currently a rising senior at the Perkiomen School in Pennsylvania. His passion for chess was what led him to eventually find Silverline Tutoring. Once he started playing Chess at the beginning of the COVID pandemic like many others, he wanted to connect with others online, and turned to discord, where he found Silverline Tutoring with the opportunity to tutor chess. There, he fell in love with the unique community and he took the opportunity to become COO in order to be able to make more positive changes in the community. One of the biggest changes he made was expanding the chess division and starting collaborations with other groups to host tournaments. In his personal life, he enjoys Math and Physics classes and also plays the piano. For college, he hopes to join the US Air Force through their Academy/ROTC or get a degree in engineering. Currently, his top choices for college include the USAF Academy, Stevens Institute of Technology, and Rose Hulman.</p>
+                            <p>Education: <br><br> <span style="color: #AFA99E;">Chelmsford High School '23</span></p>
+                            <p>Hobbies</p>
+                            <ul>
+                                <li>Tutoring</li>
+                                <li>Basketball</li>
+                                <li>Music</li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-entry media-size0">
+                        <a href="single.html" style="background: none;" class="text-center">
                             <img src="images/team/tarun.jpg" alt="Image" class="img-fluid">
                         </a>
                         <div class="bg-white m-body">
@@ -315,6 +335,29 @@
                         </div>
                     </div>
                 </div> -->
+                <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-entry media-size2">
+                        <a href="single.html" style="background: none;" class="text-center">
+                            <img src="images/team/mauro.png" alt="Image" class="img-fluid">
+                        </a>
+                        <div class="bg-white m-body">
+                            <h5 style="text-align: center;">Mauro Sousa</h5>
+                            <h6 style="padding: 5px; border-radius: 5px; background: #338f72; text-align: center;">International Head</h6>
+                            <p>Mauro Sousa is a first year undergraduate student at IU International University of Applied Sciences in Berlin, Germany. He lives in Luanda, Angola but is pursuing an online bachelor’s degree in Computer Science at IU. Mauro has a passion for everything technological: smartphones, computers, tablets, etc.; and this passion is the force behind his desire to seek a career in the software development area. He also enjoys spending time on social media and engages a lot with people on Twitter, Instagram, Linkedin and more. Mauro saw the potential Silverline Tutoring had and the growing need that students around the world have for tutoring and help with their studies. Mauro’s plan is to help spread awareness of Silverline Tutoring across his continent and make it as acknowledgeable as it is in other parts of the world, the reason why he joined Silverline Tutoring as an International Head.  </p>
+                            <p>Education: <br><br> <span style="color: #AFA99E;">IU International University of Applied Sciences ‘25</span></p>
+
+                            <p>Hobbies</p>
+                            <ul>
+                                <li>Social Media </li>
+                                <li>Basketball</li>
+                                <li>Music</li>
+                                <li>Coding</li>
+                                <li>Traveling</li>
+                            </ul>
+
+                        </div>
+                    </div>
+                </div>
                 <div class="col-6 col-sm-6 col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
                     <div class="media-entry media-size2">
                         <a href="single.html" style="background: none;" class="text-center">
